--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,10 @@ version: "3.8"
 services:
   mcserver:
     image: minecraft-server
+    expose:
+      - 25565:25565
+    ports:
+      - 25565:25565
     volumes:
       - ./world:/mc/world
       - ./logs:/mc/logs
