--- a/server/server.properties
+++ b/server/server.properties
@@ -9,9 +9,9 @@ allow-flight=false
 announce-player-achievements=true
 server-port=25565
 max-world-size=29999984
-level-type=DEFAULT
+level-type=LARGEBIOMES
 enable-rcon=false
-level-seed=
+level-seed=974521541182684786
 force-gamemode=true
 server-ip=
 network-compression-threshold=256
@@ -22,7 +22,7 @@ spawn-animals=true
 hardcore=false
 snooper-enabled=true
 resource-pack-sha1=
-online-mode=false
+online-mode=true
 resource-pack=
 pvp=true
 difficulty=3
